infra/ec2/ec2-sg.tf
resource "aws_security_group" "terraform-web-sg" {
  name        = "terraform-web-sg"
  description = "Terraform experiment"
  vpc_id      = var.vpc_id

  # ingress {
  #   from_port        = 80
  #   to_port          = 80
  #   protocol         = "tcp"
  #   cidr_blocks      = ["0.0.0.0/0"]
  #   ipv6_cidr_blocks = ["::/0"]
  # }

  # egress {
  #   from_port        = 80
  #   to_port          = 80
  #   protocol         = "tcp"
  #   cidr_blocks      = ["0.0.0.0/0"]
  #   ipv6_cidr_blocks = ["::/0"]
  # }

  # ingress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  # egress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    # cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [var.alb_sg_id]
  }

}
