infra/ec2/main.tf
resource "aws_instance" "web" {
  ami             = var.ami
  instance_type   = "t2.micro"
  key_name        = "test-terraform-vpc-provisioning"
  user_data       = templatefile("ec2/install_apache.sh", { server = "0${var.instance_count}" })
  security_groups = var.security_groups

  count     = var.instance_count
  subnet_id = element(var.subnets, count.index)

  tags = {
    Name = element(var.names, count.index)
  }
}
